--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="ae-grid au-xs-ta-center au-mb-4">
 
+  <!--
   <div class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3"><img src="assets/img/team-1.jpg" alt="" class="au-mb-3">
     <h5 class="ae-u-bolder au-mt-2">Robert T. Williams</h5>
     <p class="ae-u-bolder au-mb-3">Graphic Designer</p>
@@ -17,8 +18,17 @@
     <p class="ae-u-bolder au-mb-3">Art Director</p>
     <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><a href="#0" class="ae-u-bolder au-underline">@patrickanderson</a>
   </div>
+-->
+  <div *ngFor="let persona of _servicio.equipo" class="animated fadeIn ae-grid__item item-lg-4 ae-kappa au-mb-3">
+    <img [src]="persona.url" alt="" class="au-mb-3">
+    <h5 class="ae-u-bolder au-mt-2">{{ persona.nombre }}</h5>
+    <p class="ae-u-bolder au-mb-3">{{ persona.subtitulo }}</p>
+    <p class="au-lg-ta-left au-mb-3 au-pl-4 au-pr-4">{{ persona.frase }}</p>
+    <a target="_blank" href="https://twitter.com/{{ persona.twitter }}" class="ae-u-bolder au-underline">{{ persona.twitter }}</a>
+  </div>
 
 </div>
+
 <div class="ae-grid au-pt-2">
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
     <h4 class="ae-u-bolder">Title example</h4>
