Fin de la sección 6

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+/* SVG Animation */
+
+svg path,
+svg rect{
+  fill: black;
+}
+
 /* You can add global styles to this file, and also import other style files */
 @-webkit-keyframes fadeIn {
     from {
