--- a/src/assets/css/urku.css
+++ b/src/assets/css/urku.css
@@ -1272,7 +1272,8 @@ body {
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
           align-items: flex-end;
-  height: 100vh;
+/*  height: 100vh;  */
+  height: 65vh;
   padding-bottom: 1.5rem;
   width: 100%;
 }
@@ -1350,7 +1351,7 @@ body {
 }
 
 .item-inside-1 {
-  background-image: url("../img/project-1.jpg");
+  /* background-image: url("../img/project-1.jpg"); */
   background-position: 50% 100%;
   background-size: 350%;
 }
